--- a/index.html
+++ b/index.html
@@ -6,31 +6,30 @@
     <title>Shark</title>
 </head>
 <body>
-    <h1>Top 5 Deadliest Sharks</h1>
-
+    <a href="index.html"><h1>Top 5 Deadliest Sharks</h1></a>
     <ol>
         <li>
-            <h2>Great White Shark</h2>
-            <p><em>When one hears the term “shark,” it’s the Great White that often springs to mind. Carcharodon carcharias, the scientific name for the Great White Shark, translates to “sharp tooth,” a fitting moniker for this apex predator of the sea. Renowned for its size and power, the Great White has been responsible for the highest number of recorded shark attacks on humans. But let’s dispel a common misconception: these creatures are not hunting humans. Most shark attacks involving Great Whites are incidents of curiosity or mistaken identity, where a shark mistakes a surfer for a seal or investigates an unfamiliar object with a test bite.</em></p>
+            <a href="Great.html"><h2>Great White Shark</h2></a>
+            <p><em>When one hears the term “shark,” its the Great White that often springs to mind. Carcharodon carcharias, the scientific name for the Great White Shark, translates to “sharp tooth,” a fitting moniker for this apex predator of the sea. Renowned for its size and power, the Great White has been responsible for the highest number of recorded shark attacks on humans. But let’s dispel a common misconception: these creatures are not hunting humans. Most shark attacks involving Great Whites are incidents of curiosity or mistaken identity, where a shark mistakes a surfer for a seal or investigates an unfamiliar object with a test bite.</em></p>
         </li>
 
         <li>
-            <h2>Tiger Shark</h2>
+           <a href="Tiger.html"><h2>Tiger Shark</h2></a>
             <p><em>The Tiger Shark, with its distinctive dark stripes reminiscent of its namesake, is another species that commands both respect and caution. Known colloquially as “the ocean’s garbage eaters,” Tiger Sharks have an almost indiscriminate palate, consuming a wide array of prey from fish and marine mammals to inedible objects like license plates and tires. This opportunistic feeding behavior is part of what makes them so fascinating and, at times, dangerous to humans. Not only for hunting, their powerful jaws and unique teeth are also designed to cut through tough substances, which places them just behind the Great White in posing a threat to humans.</em></p>
         </li>
 
         <li>
-            <h2>Bull Shark</h2>
+           <a href="Bull.html"><h2>Bull Shark</h2></a>
             <p><em>Among the most dangerous sharks to humans are Bull Sharks, known for their unpredictable nature and ability to thrive in both freshwater and saltwater environments. This adaptability is extraordinary, allowing bull shark pups to grow in the relative safety of freshwater rivers before migrating to the open sea. This species’ aggressive behavior is often attributed to high testosterone levels, which may explain why they’re responsible for a significant number of attacks on humans, some of which have been fatal. In fact, the bull shark is often considered a dangerous shark due to these factors.</em></p>
         </li>
 
         <li>
-            <h2>Oceanic Whitetip Shark</h2>
+            <a href="Ocean.html"><h2>Oceanic Whitetip Shark</h2></a>
             <p><em>Venturing into the vast expanse of the open ocean, one may encounter the Oceanic Whitetip Shark, a species characterized by its persistence and boldness. Unlike the coastal species, Oceanic Whitetips are known for their involvement in harrowing shipwreck incidents, historically posing a significant threat to survivors in the water. The infamous sinking of the USS Indianapolis in 1945 is a chilling example, where hundreds of shipwreck survivors were attacked by these sharks.</em></p>
         </li>
 
         <li>
-            <h2>Shortfin Mako Shark</h2>
+            <a href="Mako.html"><h2>Shortfin Mako Shark</h2></a>
             <p><em>Shortfin Mako Sharks, the speed demons of the deep, are a marvel of evolution. Capable of achieving speeds up to 32 km/h, they are among the fastest of all shark species. Their agility and speed, paired with their aggressive nature, make them formidable predators, feeding on squid and pelagic fish such as swordfish and tuna, which they hunt near the top of the food chain.</em></p>
         </li>
     </ol>
