--- a/Ocean.html
+++ b/Ocean.html
@@ -6,6 +6,7 @@
     <title>Ocean</title>
 </head>
 <body>
-    <a href="index.html"><h1>Top 5 Deadliest Sharks</h1></a>
+    <a href="index.html"><h1>Top 5 Deadliest Sharks</h1></a>    
+    <img src="istockphoto-148406869-612x612.jpg" alt="Ocean shark">
 </body>
 </html>
