--- a/Tiger.html
+++ b/Tiger.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <a href="index.html"><h1>Top 5 Deadliest Sharks</h1></a>
+    <img src="download.webp" alt="Tiger Shark">
 </body>
 </html>
